--- a/files/config/postgresql.conf
+++ b/files/config/postgresql.conf
@@ -17,8 +17,8 @@ ssl = on
 #ssl_prefer_server_ciphers = on
 #ssl_ecdh_curve = 'prime256v1'
 #ssl_dh_params_file = ''
-#ssl_cert_file = '/certs/tls.crt'
-#ssl_key_file = '/certs/tls.key'
+ssl_cert_file = '/certs/tls.crt'
+ssl_key_file = '/certs/tls.key'
 #ssl_ca_file = ''
 #ssl_crl_file = ''
 
