--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -84,17 +84,19 @@ spec:
           value: /certs/tls.key
         - name: TLS_CERT_FILE
           value: /certs/tls.crt
+        - name: NUM_PROCS
+          value: "{{ .Values.pgpool.numProcs }}"
         - name: BACKEND_0_HOST
           value: {{ printf "%s-master-0.%s" $.Release.Name $postgresServiceName }}
         - name: BACKEND_0_WEIGHT
-          value: '1'
+          value: "1"
         - name: BACKEND_0_NAME
           value: server0
         {{- range $i := (until (int .Values.postgres.replicas)) }}
         - name: {{ printf "BACKEND_%d_HOST" ($i| add1) }}
           value: {{ printf "%s-standby-%d.%s" $.Release.Name $i $postgresServiceName }}
         - name: {{ printf "BACKEND_%d_WEIGHT" ($i| add1) }}
-          value: '1'
+          value: "1"
         - name: {{ printf "BACKEND_%d_NAME" ($i| add1) }}
           value: {{ printf "server%d" ($i| add1) }}
         {{- end }}{{/* range */}}
