Review log line prefix (postgresql.conf)

--- a/files/config/postgresql.conf
+++ b/files/config/postgresql.conf
@@ -191,7 +191,7 @@ logging_collector = off
 #log_duration = off
 #log_error_verbosity = default      # terse, default, or verbose messages
 #log_hostname = off
-log_line_prefix = '%m [%p] %q%u@%d '
+log_line_prefix = '%m [%p] vxid=%v xid=%x %q%u@%d '
 #log_lock_waits = off           # log lock waits >= deadlock_timeout
 #log_statement = 'none'         # none, ddl, mod, all
 #log_replication_commands = off
