--- a/files/config/postgresql.conf
+++ b/files/config/postgresql.conf
@@ -273,3 +273,4 @@ default_text_search_config = 'pg_catalog.english'
 #exit_on_error = off            # terminate session on any error?
 #restart_after_crash = on       # reinitialize after backend crash?
 
+include_dir = '/etc/postgresql/conf.d'
